info: Improve error handling for PackageKit version check

Fixes critical errors when PackageKit isn't installed.

https://bugzilla.gnome.org/show_bug.cgi?id=697821